# image-recognition-gallery

./: .gitignore  App.tsx  LICENSE  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/myimagegallery/: BindingsModule.kt  BindingsPackage.kt  MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
components/: Item.tsx
image_processing/: Cargo.toml  Makefile  build-android.sh  cargo-config.toml  copy-android.sh
image_processing/ImageProcessing.xcframework/: Info.plist
image_processing/include/: image_processing.h
image_processing/src/: lib.rs
ios/: Bindings.h  Bindings.m  Bindings.mm  Podfile
ios/ImageRecognitionGallery/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/ImageRecognitionGallery.xcodeproj/: project.pbxproj
ios/ImageRecognitionGallery.xcodeproj/xcshareddata/xcschemes/: MyImageGallery.xcscheme
ios/ImageRecognitionGallery.xcworkspace/: contents.xcworkspacedata
ios/ImageRecognitionGalleryTests/: ImageRecognitionGalleryTests.m
screens/: Home.tsx  Image.tsx
util/: constants.ts  native.ts
