[package]
name = "image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_processing"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2.153"
jni = { version = "0.21.1", optional = true, default-features = false }
image = "0.25.0"
base64 = "0.22.0"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"

[features]
default = ["jni"]